--- a/website/index2.html
+++ b/website/index2.html
@@ -11,11 +11,12 @@
 </head>
 <body>
 <header>
-    <h1>website</h1>
+    <h1>presenting our data sets</h1>
 </header>
     <main>
-            <div class="arrondissements">
+    <div class="arrondissements">
         <h3>Riviere-des-Prairies—Pointe-aux-Trembles</h3>
+
         <ul>
             <li>area: 42.3 km^2</li>
             <li>population: 106, 734</li>
@@ -24,6 +25,7 @@
     </div>
     <div class="arrondissements">
         <h3>L'Île-Bizard–Sainte-Geneviève</h3>
+				<br>
         <ul>
             <li>area: 23.6</li>
             <li>population: 18413</li>
@@ -32,6 +34,7 @@
     </div>
     <div class="arrondissements">
         <h3>Pierrefonds-Roxboro</h3>
+				<br><br><br>
         <ul>
             <li>area: 27.1km^2</li>
             <li>population: 69, 297</li>
@@ -40,6 +43,7 @@
     </div>
     <div class="arrondissements">
         <h3>Saint-Laurent</h3>
+				<br><br><br>
         <ul>
             <li>area: 100km^2</li>
             <li>population: 98, 828</li>
@@ -56,6 +60,7 @@
     </div>
     <div class="arrondissements">
         <h3>Mercier–Hochelaga-Maisonneuve</h3>
+				<br>
         <ul>
             <li>area: 25.4km^2</li>
             <li>population: 136024</li>
@@ -63,11 +68,6 @@
         </ul>
     </div>
 
-    <a href="makefile">makefile</a>
-    <form action="robots.txt">
-        <input type="submit" value="robots.txt" />
-
-    </form>
 
 <table>
     <tr>
